Update all the things with refactored object-based storage and parsing, proc6 and proc4 using new system

--- a/parallyze.conf
+++ b/parallyze.conf
@@ -1,22 +1,27 @@
-# Conf file for sweep pipeline
+#
+# Config file for default parallyze run
+# Expected keys are REF_GENOME and GENOME_DIFF
+#
 
-PREFIX          testpreprocess
+REF_GENOME      REL606.2.gbk
 
-SE_READS           
-	/s/seq/lamprey/test-reads/Kidney.fq.gz
-	/s/seq/lamprey/test-reads/Monocytes.fq.gz	
-	/s/seq/lamprey/test-reads/Muscle.fq.gz
-	/s/seq/lamprey/test-reads/Neutrophils.fq.gz
-	/s/seq/lamprey/test-reads/SPPI.fq.gz
+GENOMEDIFF_FILES
+    Ara+1_50K_11392_annotated.gd  
+    Ara+2_50K_11342_annotated.gd  
 
-PE_READS
-	/s/seq/lamprey/test-reads/brain_paired.qc.fq.gz
-	/s/seq/lamprey/test-reads/spinal_cord_paired.qc.fq.gz
+# Include synonymous mutations?
+SYNONYMOUS      True
+# Include noncoding SNPs?
+NONCODING       True
+# Include SNPs in pseudogene?
+PSEUDOGENE      True
+# Include intergenic SNPs?
+INTERGENIC      False
 
-HTSIZE           2e7
-KSIZE           25
-NHASHES         4
-POOLED_HTSIZE   4e7
+# Number of replicates for simulation
+REPLICATES      10
 
-NORMALIZE       20
-MINABUND        2
+# Number of top genes to display
+GENES_TO_DISPLAY    5
+
+
