added nonsynon. mut as an option, continued updating snpcount

--- a/parallyze.conf
+++ b/parallyze.conf
@@ -10,6 +10,8 @@ GENOMEDIFF_FILES
     Ara+1_50K_11392_annotated.gd  
     Ara+2_50K_11342_annotated.gd  
 
+# Include nonsynonymous mutations?
+NONSYNONYMOUS      True
 # Include synonymous mutations?
 SYNONYMOUS      True
 # Include noncoding SNPs?
