--- a/parallyze.conf
+++ b/parallyze.conf
@@ -11,6 +11,8 @@ Ara+1_20K_9282A_annotated.gd
 Ara+2_20K_8601A_annotated.gd
 Ara+4_20K_8603A_annotated.gd
 Ara+5_20K_8604A_annotated.gd
+Ara-1_20K_8593A_annotated.gd
+Ara-3_20K_ZDB458_annotated.gd
 Ara-5_20K_8597A_annotated.gd
 Ara-6_20K_8598A_annotated.gd
 
@@ -26,7 +28,7 @@ PSEUDOGENE      False
 INTERGENIC      False
 
 # Number of replicates for simulation
-REPLICATES      10
+REPLICATES      100
 
 # Number of top genes to display
-GENES_TO_DISPLAY    5
+GENES_TO_DISPLAY    10
