add option to include gene product in mutationTally output

--- a/parallyze.conf
+++ b/parallyze.conf
@@ -27,6 +27,9 @@ PSEUDOGENE      False
 # Include intergenic SNPs?
 INTERGENIC      False
 
+# Include gene product in output?
+GENE_PRODUCT     False
+
 # Number of replicates for simulation
 REPLICATES      100
 
